fix layout issues

--- a/webapp/src/css/enketo/medic.less
+++ b/webapp/src/css/enketo/medic.less
@@ -256,6 +256,7 @@
 
     .or-appearance-h1:not(.disabled) {
       padding: 5px;
+      padding-left: 2.5rem;
       text-align: center;
       font-weight: bold;
       margin-top: 20px;
@@ -283,7 +284,8 @@
       i.fa {
         position: absolute;
         left: 0;
-        margin: 5px 10px;
+        top: 0;
+        margin: 10px;
       }
       .question-label {
         font-size: @font-extra-extra-large;
